app/assets/stylesheets/partials/modules/_filters.scss
/* ======================================================================================
   @MODULES -> FILTERS
   ====================================================================================== */

/*
  Usage:
    Filters and sorting.

  Note:
    A lot of styles are being used from the 'Drop down menu' module.

  Demo:
    Style Guide -> Modules -> Filters
*/

/* Set variables */
$filter-drop-down-width: 285;

.filters {

  /* Hide elements at 'wide' layout at this breakpoint */
  @include respond-min($lap-lrg) {
    .filters__hide-wide {display: none;}
  }

  /* Overrides for 'Drop down menu target' */
  .drop-down-menu__target {

    /* Reduce the width at this breakpoint range */
    @include respond-range($non-palm, $lap-lrg - 1) {
        @include to-rem(width, $filter-drop-down-width);
    }

    /* Bring into view and remove 'box' styles at this breakpoint */
    @include respond-min($lap-lrg) {
        display: block;
        position: static;
        background: none;
        box-shadow: none;

        /* Hide the arrow pointer */
        > .arrow {display: none;}
    }
  }

  /* 'On sale' toggle */
  .filters__sale {
    @extend .islet;
    @extend %transition-subtle;

    /* Turn off styles at this breakpoint */
    @include respond-max($lap-lrg - 1) {
      box-shadow: none;
      border-radius: 0;

      /* Hover state */
      &:hover {background: none;}
    }

    /* Change top/bottom padding at this breakpoint */
    @include respond-min($lap-lrg) {
      @include to-em(padding-top padding-bottom, $spacing-half+1.5);
    }

      /* Less right margin for checkbox */
      input[type="checkbox"] {@include to-rem(margin-right, $spacing-sixth);}
  }
}

/* --Extenders-- */

/* When used for pin board */
.filters--pin-board {
  position: relative;
  @include to-rem(margin-top, $spacing-half);

  /* Increase top margin at this breakpoint */
  @include respond-min($non-palm) {
    @include to-rem(margin-top, $spacing-base);

    // Inline script set by the mobile viewport when the filters are set to a 'closed' state. Requires override.
    //.drop-down-container > .drop-down-menu__target {display: block !important;}
  }
}

  /* Throw list into horizontal mode at this breakpoint */
  @include respond-min($lap-lrg) {
    .filters__list > li {
      display: inline-block;
      vertical-align: middle;
      position: relative;
      @include to-rem(margin-right, $spacing-micro);

      /* Turn off right margin for last child */
      &:last-child {margin-right: 0;}

      /* Old IE */
      @include old-ie {
        @include to-rem(margin-right, $spacing-quarter);
      }
    }

      /* Filters target (drop down) */
      .filters__target {
        @include drop-down;
        @include box;
        @include to-rem(width, $filter-drop-down-width);
        @include to-rem(margin-top, 10.5);

        /* Drop down pointer arrow */
        > .arrow {border-bottom-color: $color-off-white;}
      }
  }

    /* Filter trigger (drop down trigger) - we need to toggle the display of the triggers between viewports as we have 2 triggers for each */
    .filters__trigger {

      &.filters__trigger--wide {display: none !important;}

      @include respond-min($lap-lrg) {
        &.filters__trigger--narrow {display: none !important;}

        &.filters__trigger--wide {display: block !important;}
      }
    }

  /* Sort */
  .filters__sort-options {
    @include font-size($font-size-sml);
    position: absolute;
    top: 0;
    right: 0;
  }

